add latent and sensible heat

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1401_熱と温度",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcIbzxNu52qVeBNqaeUaAg",
+      "authorship_tag": "ABX9TyPD4U3bcAmfbHwah3wD+vnN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,8 @@
         "id": "lk0APLoCM-99"
       },
       "source": [
-        "#### 潜熱"
+        "#### 潜熱\n",
+        "latent heat"
       ]
     },
     {
@@ -101,7 +102,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 顕熱"
+        "#### 顕熱\n",
+        "sensible heat"
       ]
     },
     {
