done by the specific heat

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -6,7 +6,7 @@
       "name": "1401_熱と温度",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPLhv2DMOZElpNfxVa/G63+",
+      "authorship_tag": "ABX9TyMMIpN1c8mh6pSIZLduCuaJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,13 +172,95 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "T5NlTpt7RAed"
+      },
+      "source": [
+        "#### 温度の目盛り\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EBYLOijXRBRF"
+      },
+      "source": [
+        "##### 水の相転移"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KhFv_Lu6Q7xj",
+        "cellView": "form",
+        "outputId": "1bfd57c1-a7dd-430b-853d-58aff2e5e9be",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 氷(ice)から水蒸気(vapor)へ\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/-w1Vnkt7J5M\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/-w1Vnkt7J5M\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cdxOgNjVR7GA",
+        "cellView": "form",
+        "outputId": "93ac30a6-1018-4e05-cc43-1f083a5e86f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 氷の相転移の温度変化測定\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/cutEBwkffc4?start=97\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/cutEBwkffc4?start=97\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EqTr4g0osbNO"
       },
       "source": [
-        "#### 温度の目盛り\n",
-        "\n",
-        "\n",
-        "##### 水の相転移\n",
         "\n",
         "![Breaking Symmetry: Phase Transitions, Massive Excitations, and Gravitational Domains](https://www.researchgate.net/profile/Fikriye_Idil_Kaya/publication/321545557/figure/fig4/AS:568296684650496@1512503896521/Phase-transitions-of-water-Temperature-vs-Time-or-Heat-graph.png)\n",
         "\n",
@@ -229,11 +311,28 @@
         "  - water $\\rightarrow$ vapor:: 蒸発熱\n",
         "    - vaport $\\rightarrow$ water:: 凝縮熱\n",
         "\n",
-        "  - 融解熱, 凝固熱: 分子間力に打ち勝って(完全に)自由になるために必要なエネルギー\n",
-        "\n",
-        "- 潜熱, _latent heat_\n",
+        "  - 融解熱, 凝固熱: 分子間力に打ち勝って(完全に)自由になるために必要なエネルギー"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qkK3ixVsX8Sg"
+      },
+      "source": [
+        "##### 潜熱, _latent heat_\n",
         "  - 転移熱の別称\n",
         "  - 区間 ice+water, water+vapor に潜む熱\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "chhW-k4wYKbi"
+      },
+      "source": [
+        "##### 顕熱, sensible heeat\n",
+        "- 熱(heat) を受けた分だけ, 温度(Temperature) が変化している熱(区間)"
       ]
     },
     {
@@ -265,9 +364,9 @@
         "id": "MCHVs1zUCwcN"
       },
       "source": [
-        "### $p-T$ 曲線, $p$:圧力, $T$:温度\n",
+        "### 相図, phase diagram\n",
         "\n",
-        "相図, phase diagram"
+        "$p-T$ 曲線, $p$:圧力, $T$:温度"
       ]
     },
     {
@@ -290,10 +389,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "QQOhO_2MHl_4"
+      },
+      "source": [
+        "#### 二酸化炭素の相図\n",
+        "![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Carbon_dioxide_pressure-temperature_phase_diagram.svg/500px-Carbon_dioxide_pressure-temperature_phase_diagram.svg.png)\n",
+        "\n",
+        "---\n",
+        "[Carbon dioxide](https://en.wikipedia.org/wiki/Carbon_dioxide)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "HdIe1JLHEG_W"
       },
       "source": [
-        "##### 水の相図\n",
+        "#### 水の相図\n",
         "\n",
         "![Properties of water](https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Phase_diagram_of_water_simplified.svg/500px-Phase_diagram_of_water_simplified.svg.png)\n",
         "\n",
@@ -301,15 +413,6 @@
         "\n",
         "---\n",
         "[Properties of water](https://en.wikipedia.org/wiki/Properties_of_water#Density_of_water_and_ice), [Triple point](https://en.wikipedia.org/wiki/Triple_point), [Water Phase Diagram](http://www1.lsbu.ac.uk/water/water_phase_diagram.html)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RhipEDLiE5L3"
-      },
-      "source": [
-        "#### 二酸化炭素の相図"
       ]
     },
     {
@@ -324,20 +427,178 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bkI1_hwELJfz"
+        "id": "AlRuKghCKGBo"
       },
       "source": [
-        "### 熱容量と比熱容量"
+        "#### 熱と分子運動"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5NkiG4K-IZ7j",
+        "cellView": "form",
+        "outputId": "89a7eaff-40e8-45c3-8832-87173ac9ec02",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 625
+        }
+      },
+      "source": [
+        "#@title 熱運動の基本\n",
+        "%%html\n",
+        "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter-basics/latest/states-of-matter-basics_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oneCy4t_JAFD",
+        "cellView": "form",
+        "outputId": "def03733-0f8c-4a58-c3c1-02cca3b69cad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 625
+        }
+      },
+      "source": [
+        "#@title 熱運動(P,V,T)\n",
+        "%%html\n",
+        "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KY9kLkkyMzgp"
+        "id": "sv_tJoNFKPnm"
       },
       "source": [
-        "#### 顕熱\n",
-        "sensible heat"
+        "#### 内部エネルギー, Internal energy, $U$: ${\\rm J}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UHlXyAtZKi1g"
+      },
+      "source": [
+        "> 分子一個の力学的エネルギー** = 分子一個の_運動エネルギー_ + 他の分子や環境による _位置エネルギー_\n",
+        "\n",
+        ">> **分子一個の全エネルギー** = 分子一つの _運動エネルギー_ + (相互作用による) _ポテンシャルエネルギー_\n",
+        "\n",
+        "\\begin{align*}\n",
+        "\\varepsilon_i  &=  k_i + u_{ij}&\n",
+        "\\end{align*}\n",
+        "\n",
+        "**内部エネルギー**:: $\\varepsilon_i$ 注目する物質全体個数だけ足し合わせたもの\n",
+        "\n",
+        "\\begin{align*}\n",
+        "U &= \\sum \\varepsilon_i  = \\sum_{i}  k_i + \\sum_{i,j(\\neq i)}   u_{ij}&\n",
+        "\\end{align*}\n",
+        "\n",
+        "ここでは, 物質一つ一つに注目しているので、物体全体の運動(容器の落下や回転)は考えていません"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OkaGV387NNAi",
+        "cellView": "form",
+        "outputId": "0bda2467-3ae0-420a-877f-94b83d2d592d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 625
+        }
+      },
+      "source": [
+        "#@title 熱: エネルギーの移動形態\n",
+        "%%html\n",
+        "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe src=\"https://phet.colorado.edu/sims/html/energy-forms-and-changes/latest/energy-forms-and-changes_en.html\" width=\"800\" height=\"600\" scrolling=\"no\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bkI1_hwELJfz"
+      },
+      "source": [
+        "### 熱容量と比熱容量\n",
+        "\n",
+        "熱量: エネルギーの移動形態, $Q$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ex5g0DBmODt6"
+      },
+      "source": [
+        "#### 熱量の実用単位, calorie: ${\\rm cal}$\n",
+        "\n",
+        "> 定義: ${\\rm 1 g}$ の水を 温度 ${\\rm 1 {}^\\circ C}$ 上げるために必要な熱量\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aMkDM8fdPbLQ"
+      },
+      "source": [
+        "#### 熱量の(国際)単位, Joule: ${\\rm J}$\n",
+        "\n",
+        "> ${\\rm J}$ はエネルギーまたは仕事の単位"
       ]
     },
     {
@@ -346,7 +607,183 @@
         "id": "x-JECkl4MW0n"
       },
       "source": [
-        "#### 仕事等量 $\\mathcal{J}$"
+        "#### 仕事等量 $\\mathcal{J}$\n",
+        "\n",
+        "冬場、両掌を擦ることで、手が暖かくなる事を思い出しください。\n",
+        "1. 両掌には接する事で, 摩擦力が働きます\n",
+        "2. 手を動かすことによって, 変位が生じます\n",
+        "3. 物理では, 仕事は力と変位で定義されています\n",
+        "\n",
+        "> Q. この動きで、私たちの掌はどうなりますか?\n",
+        "\n",
+        "このような簡単な考察から, 仕事が熱量に変換されたことが分かります."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XKzG3W61QC1l",
+        "cellView": "form",
+        "outputId": "1a57f4c3-7676-4cf9-e2b4-846674be6da0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 仕事と熱の関係\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ZbZjo7zhWFk\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ZbZjo7zhWFk\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G--uoKyzQD3P",
+        "cellView": "form",
+        "outputId": "20108986-58fc-458c-8071-6352721c0f99",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 仕事等量の測定: 英国人ジュールが用いた手法\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MBrTDKc9YZ0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MBrTDKc9YZ0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FCUZ202HTf3G"
+      },
+      "source": [
+        "仕事 $W$, 熱量 $Q$ とすると\n",
+        "\\begin{align*}\n",
+        "W = \\mathcal{J} \\cdot Q\n",
+        "\\end{align*}\n",
+        "と表現されます.\n",
+        "\n",
+        "ここで, $\\mathcal{J}$ は **熱の仕事等量**, Mechanical equivalent of heat, とよばれ, 実験から\n",
+        "\\begin{align*}\n",
+        "\\mathcal{J}\n",
+        "&= 4.18065 {\\rm\\ J /cal } &\\\\\n",
+        "&= \\dfrac{4.18065 {\\rm\\ J }}{\\rm 1 \\ cal}\n",
+        "\\end{align*}\n",
+        "であることがわかっています.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "[Calorie](https://en.wikipedia.org/wiki/Calorie), https://doi.org/10.1351/pac196408020095 "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GvY06JTqV8NW"
+      },
+      "source": [
+        "#### 熱容量, Heat capacity $C$: ${\\rm J/K}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KY9kLkkyMzgp"
+      },
+      "source": [
+        "> Q. 熱($\\Delta Q$)を加えた分だけ, 物体の温度変化($\\Delta T$)する熱の区間の名称を思い出してください.\n",
+        "\n",
+        "熱($\\Delta Q$)の出入りによって, 物体が異なれば(水,油,金属等)の温度変化($\\Delta T$)は異なります.  \n",
+        "\n",
+        "そこで物体ごとの **熱容量** $C$ を次のように定義します.\n",
+        "\n",
+        "\\begin{align*}\n",
+        "C &= \\dfrac{\\Delta Q}{\\Delta T}\n",
+        "\\end{align*}\n",
+        "\n",
+        "これを文章で表現すれば, 熱容量 $C$ は\n",
+        "\n",
+        "> 物体の温度 1℃ 上げるのに必要な熱量\n",
+        "\n",
+        "となります. 単位は\n",
+        "- 国際単位系: ${\\rm J/K, \\ J/{}^\\circ C}$\n",
+        "- 生活単位: ${\\rm cal/K, \\ cal/{}^\\circ C}$\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VuOqSBIiZ5Bo"
+      },
+      "source": [
+        "#### 比熱容量, 比熱 $c$ : ${\\rm J/g.K}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-EPx5hZmaqtM"
+      },
+      "source": [
+        "物体の質量によって, 内部エネルギーを担当する分子の数が増えるため, 熱容量 $C$ は\n",
+        "質量に比例します. \n",
+        "\n",
+        "注目する物質の質量を $m$ g とすると, 単位グラムあたりの熱容量 $c$ は\n",
+        "\\begin{align*}\n",
+        "c &= \\dfrac{C}{m} &\\\\\n",
+        "&= \\dfrac{1}{m} \\dfrac{\\Delta Q}{\\Delta T}&\n",
+        "\\end{align*}\n",
+        "となります. この $c$ を **比熱容量**(比熱)と言います\n",
+        "\n",
+        "物体は, 体積$(V)$や圧力$(p)$によって状態が変わりますそこで\n",
+        "- 物体の圧力一定 $(\\Delta p=0)$の元での比熱容量 $c$ を, 定圧比熱容量 $c_p$\n",
+        "- 物体の体積一定 $(\\Delta V=0)$の元での比熱容量 $c$ を, 定積比熱容量 $c_V$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SCIu7L1Zcq2x"
+      },
+      "source": [
+        "### モル熱容量"
       ]
     },
     {
