add comment for assignment

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1401_熱と温度",
       "provenance": [],
-      "authorship_tag": "ABX9TyPtd/NpCB81B/rg5ZwlrKDJ",
+      "authorship_tag": "ABX9TyO08rZSO9cRqx5Yn2FMObrX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,15 @@
         "専門分野: 物性理論(特に磁性)\n",
         "\n",
         "連絡先: kzhk@gm.akita-nct.ac.jp"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hq6S2cCkoGlm"
+      },
+      "source": [
+        "課題: 講義の進捗状況を見ながら, Webclassを通じて出題します."
       ]
     },
     {
